unpackaged/post/08_redu_object_tracking/objects/rio_ed__Program_Application__c.object
<CustomObject>
    <description>Records each Contact&apos;s Program application(s).</description>
    <fields>
        <fullName>rio_ed__Applicant__c</fullName>
        <inlineHelpText>The Contact who is applying to be enrolled in the Program.</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type_Option__c</fullName>
        <inlineHelpText>How the student will pay for this course</inlineHelpText>
        <label>Fee Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rio_ed__Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type_Option</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type__c</fullName>
        <inlineHelpText>How the student will pay for this course</inlineHelpText>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Opportunity this Program Application is optionally related to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Program Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rio_ed__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Academic Program the related to this Program Application.</inlineHelpText>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <infoMessage>Please select the Program related to this application.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rio_ed__Start_Month__c</fullName>
        <inlineHelpText>The month the Applicant would like to commence in the Program.</inlineHelpText>
        <label>Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Start_Year__c</fullName>
        <defaultValue>TEXT(YEAR( TODAY()))</defaultValue>
        <inlineHelpText>The year the applicant would like to commence in the Program.</inlineHelpText>
        <label>Start Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                    <default>true</default>
                    <label>2018</label>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
				<value>
                    <fullName>2021</fullName>
                </value>
				<value>
                    <fullName>2022</fullName>
                </value>
				<value>
                    <fullName>2023</fullName>
                </value>
				<value>
                    <fullName>2024</fullName>
                </value>
				<value>
                    <fullName>2025</fullName>
                </value>
				<value>
                    <fullName>2026</fullName>
                </value>
				<value>
                    <fullName>2027</fullName>
                </value>
				<value>
                    <fullName>2028</fullName>
                </value>
				<value>
                    <fullName>2029</fullName>
                </value>
				<value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Status_Date__c</fullName>
        <inlineHelpText>The date the application status most recently changed to its current value.</inlineHelpText>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rio_ed__Status__c</fullName>
        <inlineHelpText>Set the current status of this Program Application.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending - Awaiting Documentation</fullName>
                </value>
                <value>
                    <fullName>Pending - Acceptance of Offer</fullName>
                </value>
                <value>
                    <fullName>Applicant Accepted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
				<value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Application</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Program Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Applications</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>